alteração de imagens e valores

--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
             <p>Sua presença já é nosso maior presente! Mas, para quem deseja nos mimar, criamos uma lista de presentes simbólicos que se transformarão em ajuda para nossos sonhos. Escolha um item como inspiração e contribua com o valor que quiser via Pix.</p>
             
             <div class="gift-gallery">
-                <div class="gift-item" data-value="150"><img src="imagens/jogoo de toalhas.webp" alt="Jogo de Toalhas"><h4>Jogo de Toalhas</h4><p class="gift-price">R$ 150,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="100"><img src="imagens/robo aspirador.jpg" alt="Robô Aspirador"><h4>Robô Aspirador</h4><p class="gift-price">R$ 100,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="200"><img src="imagens/jogo de lençóis.webp" alt="Jogo de Lençóis"><h4>Jogo de Lençóis</h4><p class="gift-price">R$ 200,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="250"><img src="imagens/maquina agua com gas.png" alt="Maquina de Agua com Gás"><h4>Máquina de Água com Gás</h4><p class="gift-price">R$ 250,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="300"><img src="imagens/lua de mel.jpg" alt="Diária na Lua de Mel"><h4>Diária na Lua de Mel</h4><p class="gift-price">R$ 300,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="350"><img src="imagens/maquina de cafe.jpg" alt="Maquina de Café"><h4>Máquina de Café</h4><p class="gift-price">R$ 350,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="400"><img src="imagens/spa day.jpg" alt="Spa Day para a Noiva"><h4>Spa Day para a Noiva</h4><p class="gift-price">R$ 400,00</p><button class="btn-presentear">Contribuir</button></div>
-                <div class="gift-item" data-value="500"><img src="imagens/WhatsApp Image 2025-10-13 at 22.54.54.jpeg" alt="Creche para o Timão no dia do Casamento"><h4>Creche para o Timão</h4><p class="gift-price">R$ 500,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="150"><img src="imagens/100.jpeg" alt="Jogo de Lençóis"><h4>Jogo de Lençóis</h4><p class="gift-price">R$ 100,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="100"><img src="imagens/200.jpeg" alt="Jogo de Toalhas"><h4>Jogo de Toalhas</h4><p class="gift-price">R$ 200,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="200"><img src="imagens/300.jpeg" alt="Conjunto de Taças"><h4>Conjunto de Taças</h4><p class="gift-price">R$ 300,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="250"><img src="imagens/400.jpeg" alt="Máquina de Café"><h4>Máquina de Café</h4><p class="gift-price">R$ 400,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="300"><img src="imagens/500.jpeg" alt="Conjunto de Talheres"><h4>Conjunto de Talheres</h4><p class="gift-price">R$ 500,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="350"><img src="imagens/600.jpeg" alt="Passeio em Lua de Mel"><h4>Passeio em Lua de Mel</h4><p class="gift-price">R$ 600,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="400"><img src="imagens/700.jpeg" alt="Dia de Spa do Casal"><h4>Dia de Spa do Casal</h4><p class="gift-price">R$ 700,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="500"><img src="imagens/800.jpeg" alt="Conjunto de Panelas Esmaltadas"><h4>Conjunto de Panelas Esmaltadas</h4><p class="gift-price">R$ 800,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="500"><img src="imagens/900.jpeg" alt="Máquina de Água com Gás"><h4>Máquina de Água com Gás</h4><p class="gift-price">R$ 900,00</p><button class="btn-presentear">Contribuir</button></div>
+                <div class="gift-item" data-value="500"><img src="imagens/1000.jpeg" alt="Diária de Lua de Mel"><h4>Diária de Lua de Mel</h4><p class="gift-price">R$ 1000,00</p><button class="btn-presentear">Contribuir</button></div> 
             </div>
 
             <!-- Botão para doar outro valor -->
@@ -142,7 +144,6 @@
 
             <div class="pix-suggestion">
                 <p><strong>Valor sugerido:</strong> <span id="suggested-value">R$ 0,00</span></p>
-                <p><em>Dica: digite este valor no app do banco</em></p>
             </div>
 
             <div class="pix-reference">
