mudança no valor pix

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="pix-info">
                 <p><strong>Chave PIX:</strong></p>
                 <div class="pix-key-box">
-                    <input type="text" id="static-pix-key" value="43055388810" readonly>
+                    <input type="text" id="static-pix-key" value="felipe.lima.dev12@gmail.com" readonly>
                     <button id="copy-key-button">Copiar Chave</button>
                 </div>
             </div>
@@ -155,7 +155,7 @@
             <div class="pix-instruction">
                 <p>1. Abra o app do seu banco<br>
                    2. Vá em PIX → Pagar com chave<br>
-                   3. Cole a chave: <strong>43055388810</strong><br>
+                   3. Cole a chave: <strong>felipe.lima.dev12@gmail.com</strong><br>
                    4. Digite o valor que quiser<br>
                    5. (Opcional) Na descrição, coloque: <span id="ref-preview">(vazio)</span></p>
             </div>
