--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div><span id="minutes">0</span> Minutos</div>
                 <div><span id="seconds">0</span> Segundos</div>
             </div>
-            <p>Celebre conosco no dia 29 de maio de 2026, das 19h às 23h.</p>
+            <p>Celebre conosco no dia 29 de maio de 2026, à partir das 19:30h</p>
         </div>
     </section>
 
