mudança de texto

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section class="panel light" id="dresscode">
         <div class="content">
             <h2>Código de Vestimenta</h2>
-            <p>Queremos que se sintam lindos e confortáveis! Temos apenas um pedido especial para a harmonia das nossas fotos.</p>
+            <p>Queremos que se sintam confortáveis! Temos apenas um pedido especial para a harmonia das nossas fotos.</p>
 
             <!-- BLOCO DE CORES A EVITAR -->
             <div class="dress-code-block avoid-block">
